--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,13 +90,12 @@
 
 .smc-login {
   margin-top: 60px;
-  background-color: #764522;
   
 
   
 }.musical-bg {
   background-image: 
-    linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    linear-gradient(rgba(0, 0, 0, 0.222), rgba(0, 0, 0, 0.722)),
     url('/bg-woodgrain.png');
   background-size: cover;
   background-position: center;
@@ -104,16 +103,39 @@
   background-attachment: fixed;
   position: relative;
   overflow: hidden;
+  
 }
 
 .music-card {
-  background:#764522 50%;
-  border: 3px solid #783301;
+  background:#764522bc 50%;
+  border: 2px solid #78330183;
   border-radius: 50px;
   backdrop-filter: blur (12px);
-  -webkit-backdrop-filter: blur(12px);
   
 }
+
+.login-text {
+  color: #e9cb8b ;
+  font-family: cursive;
+  font-size: 30px;
+  background-color: #602a00 ;
+  border: 2px solid #78330183;
+  border-radius: 20;
+}
+
+.login1-text {
+  color: #e6b95a ;
+  font-family: cursive;
+  font-size: 20px;
+
+}
+
+.login-card {
+  border-color: black;
+}
+
+
+
 
 
 
